@@ -1,6 +1,7 @@
 #lang racket/base
 
 (require "manual.rkt" "struct.rkt" "scheme.rkt" "decode.rkt"
+         (only-in "core.rkt" content?)
          racket/list
          file/convertible ;; attached into new namespace via anchor
          racket/pretty ;; attached into new namespace via anchor
@@ -110,6 +111,8 @@
                  (values (substring word 0 fits) (substring word fits) #f)
                  (values #f word #f)))))
 
+(struct formatted-result (content))
+
 (define (interleave inset? title expr-paras val-list+outputs)
   (let ([lines
          (let loop ([expr-paras expr-paras]
@@ -139,9 +142,11 @@
                      (map (lambda (v)
                             (list.flow.list
                              (make-paragraph
-                              (list (elem #:style result-color
-                                          (to-element/no-color
-                                           v #:expr? (print-as-expression)))))))
+                              (list (if (formatted-result? v)
+                                        (formatted-result-content v)
+                                        (elem #:style result-color
+                                              (to-element/no-color
+                                               v #:expr? (print-as-expression))))))))
                           val-list)))])
               (loop (cdr expr-paras) (cdr val-list+outputs) #f))))])
     (if inset?
@@ -161,6 +166,25 @@
           [else (loop ((car ops) s) (cdr ops))])))
 
 (struct nothing-to-eval ())
+
+(struct eval-results (contents out err))
+(define (make-eval-results contents out err)
+  (unless (and (list? contents)
+               (andmap content? contents))
+    (raise-type-error 'eval:results "list of content" contents))
+  (unless (string? out)
+    (raise-type-error 'eval:results "string" out))
+  (unless (string? err)
+    (raise-type-error 'eval:results "string" err))
+  (eval-results contents out err))
+(define (make-eval-result content out err)
+  (unless (content? content)
+    (raise-type-error 'eval:result "content" content))
+  (unless (string? out)
+    (raise-type-error 'eval:result "string" out))
+  (unless (string? err)
+    (raise-type-error 'eval:result "string" err))
+  (eval-results (list content) out err))
 
 (define (extract-to-evaluate s)
   (let loop ([s s] [expect #f])
@@ -227,10 +251,14 @@
           (raise-syntax-error 'eval "example result check failed" s))))
     r)
   (lambda (str)
-    (let-values ([(s expect) (extract-to-evaluate str)])
-      (if (nothing-to-eval? s)
-        (values (list (list (void)) "" ""))
-        (do-ev/expect s expect)))))
+    (if (eval-results? str)
+        (list (map formatted-result (eval-results-contents str))
+              (eval-results-out str)
+              (eval-results-err str))
+        (let-values ([(s expect) (extract-to-evaluate str)])
+          (if (nothing-to-eval? s)
+              (list (list (void)) "" "")
+              (do-ev/expect s expect))))))
 
 ;; Since we evaluate everything in an interaction before we typeset,
 ;;  copy each value to avoid side-effects.
@@ -373,12 +401,23 @@
                    [else s]))))
         list)))
 
-;; Quote an expression to be evaluated:
-(define-syntax-rule (quote-expr e) 'e)
-;; This means that sandbox evaluation always works on sexprs, to get
-;; it to work on syntaxes, use this definition:
-;;   (require syntax/strip-context)
-;;   (define-syntax-rule (quote-expr e) (strip-context (quote-syntax e)))
+;; Quote an expression to be evaluated or wrap as escaped:
+(define-syntax quote-expr
+  (syntax-rules (eval:alts eval:result eval:results)
+    [(_ (eval:alts e1 e2)) (quote-expr e2)]
+    [(_ (eval:result e)) (make-eval-result (list e) "" "")]
+    [(_ (eval:result e out)) (make-eval-result (list e) out "")]
+    [(_ (eval:result e out err)) (make-eval-result (list e) out err)]
+    [(_ (eval:results es)) (make-eval-results es "" "")]
+    [(_ (eval:results es out)) (make-eval-results es out "")]
+    [(_ (eval:results es out err)) (make-eval-results es out err)]
+    [(_ e)
+     ;; Using quote means that sandbox evaluation works on
+     ;; sexprs; to get it to work on syntaxes, use
+     ;;   (strip-context (quote-syntax e)))
+     ;; while importing
+     ;;   (require syntax/strip-context)
+     'e]))
 
 (define (do-interaction-eval ev e)
   (let-values ([(e expect) (extract-to-evaluate e)])
