@@ -1,0 +1,22 @@
+  > (+ 1 2)                       
+  3                               
+  > (+ 1 2) ; three               
+  3                               
+  > (+ 1 2)                       
+  5                               
+  > (eval:result (bold "example"))
+  example                         
+  > (+ 1 2)                       
+  same                            
+  > (+ 1 2)                       
+  Again...                        
+  really the same                 
+  > (+ 1 2)                       
+  !                               
+  error: too many repeats         
+  still the same                  
+  > (+ 1 2)                       
+  counting                        
+  1                               
+  2                               
+  3                               
